# read-japanese

./: .gitattributes  .gitignore  CLAUDE.md  PRD.md  README.md  ROADMAP.md  ROADMAP2.md  Read-Japanese-Info.plist  package-lock.json
backend/: .env.example  .env.production.example  CLAUDE.md  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  run_admin.py
backend/app/: __init__.py  main.py
backend/app/config/: languages.py  models.py
backend/app/data/: wn.db
backend/app/data/jlpt/: n1.txt  n2.txt  n3.txt  n4.txt  n5.txt
backend/app/data/stories/: n1_fleeting_reminiscence.json  n1_the_passage_of_seasons.json  n2_a_new_path.json  n2_modern_society_and_solitude.json  n3_a_discovery_at_the_library.json  n3_learning_to_cook.json  n4_first_shinkansen.json  n4_the_cat_of_the_rain.json  n4_the_lost_wallet.json  n5_a_fun_weekend.json  n5_my_day_at_school.json  n5_my_first_cafe.json
backend/app/models/: story.py
backend/app/routers/: __init__.py  admin_batch.py  admin_stories.py  dictionary.py  generate.py  health.py  stories.py  tokenize.py
backend/app/services/: openrouter_client.py  storage.py  story_service.py  tokenizer.py
backend/app/services/generation/: __init__.py  audio_generator.py  batch.py  image_describer.py  image_generator.py  (+4 more)
backend/data/: common_40.csv  jlpt_n5.csv
backend/scripts/: add_chapter_title_tokens.py  align_audio.py  align_audio_whisper.py  batch_generate_deck.py  build_frequency_index.py  compare_dictionaries.py  compare_tokenizers.py  export_dictionaries.py  generate_audio.py  generate_school_story_images.py  generate_story.py  generate_story_images.py  lint_patterns.py  optimize_images.py  requirements-build.txt  retokenize_stories.py  upload_to_convex.py
backend/tests/: test_tokenizer.py  test_vocabulary_validator.py
(+532 files in other folders)
