[project]
name = "sanlang-backend"
version = "0.1.0"
description = "SanLang backend for content generation"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"scripts/*" = ["E402", "F841", "SIM102"]  # Less strict for scripts
"tests/*" = ["F401", "F841"]  # Less strict for tests
"app/main.py" = ["E402", "I001"]  # Import after env loading
"run_admin.py" = ["E402", "I001"]  # Import after env loading

[tool.ruff.lint.isort]
known-first-party = ["app"]
